# appexecfwk_appexecfwk_lite

./: README.md  README_zh.md  bundle.json
frameworks/bundle_lite/: BUILD.gn
frameworks/bundle_lite/include/: aafwk_product_adapter.h  bundle_callback.h  bundle_callback_utils.h  bundle_self_callback.h  bundlems_slite_client.h
frameworks/bundle_lite/src/: aafwk_product_adapter.cpp  bundle_callback.cpp  bundle_callback_utils.cpp  bundle_manager.cpp  bundle_self_callback.cpp  element_name.cpp  module_info_utils.cpp
frameworks/bundle_lite/src/slite/: bundle_manager.cpp  bundle_manager_inner.cpp  bundlems_slite_client.cpp
interfaces/inner_api/bundlemgr_lite/: bundle_service_interface.h
interfaces/innerkits/bundlemgr_lite/: bundle_inner_interface.h  bundle_service_interface.h
interfaces/innerkits/bundlemgr_lite/slite/: bundle_install_msg.h
interfaces/kits/bundle_lite/: bundle_manager.h  bundle_status_callback.h  install_param.h
interfaces/kits/bundle_lite/js/builtin/: BUILD.gn
services/bundlemgr_lite/: BUILD.gn
services/bundlemgr_lite/bundle_daemon/: BUILD.gn
services/bundlemgr_lite/bundle_daemon/include/: bundlems_client.h
services/bundlemgr_lite/bundle_daemon/src/: bundle_daemon.cpp  bundle_file_utils.cpp  bundlems_client.cpp
services/bundlemgr_lite/include/: bundle_app_info.h  bundle_common.h  bundle_daemon_client.h  bundle_inner_feature.h  bundle_mgr_service.h  bundle_mgr_slite_feature.h  bundle_util.h  bundlems_log.h  gt_bundle_extractor.h  gt_bundle_installer.h  gt_bundle_manager_service.h
services/bundlemgr_lite/src/: bundle_daemon_client.cpp  bundle_inner_feature.cpp  bundle_manager_service.cpp  bundle_mgr_service.cpp  bundle_mgr_slite_feature.cpp  bundle_ms_feature.cpp  bundle_res_transform.cpp  bundle_util.cpp  extractor_util.cpp  gt_bundle_extractor.cpp  gt_bundle_installer.cpp  gt_bundle_manager_service.cpp  gt_bundle_parser.cpp  zip_file.cpp
services/bundlemgr_lite/tools/: BUILD.gn
services/bundlemgr_lite/tools/src/: command_parser.cpp
utils/bundle_lite/: aafwk_event_error_code.cpp  aafwk_event_error_code.h  aafwk_event_error_id.h  adapter.h  utils_list.h
