# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")
static_library("capability_api_simulator") {
  sources = [ "${appexecfwk_lite_path}/interfaces/kits/bundle_lite/js/builtin/src/capability_module.cpp" ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/base",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/jsi",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite/js/builtin/include",
    "//foundation/communication/ipc/interfaces/innerkits/c/ipc/include",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
  ]
  defines = [ "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER" ]
  outdir = rebase_path("$root_out_dir")
  ldflags = [ "-L$outdir" ]
}

shared_library("capability_api") {
  sources = [ "${appexecfwk_lite_path}/interfaces/kits/bundle_lite/js/builtin/src/capability_module.cpp" ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/base",
    "//foundation/arkui/ace_engine_lite/interfaces/inner_api/builtin/jsi",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite/js/builtin/include",
    "//foundation/communication/ipc/interfaces/innerkits/c/ipc/include",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
  ]
  defines = [ "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER" ]
  outdir = rebase_path("$root_out_dir")
  ldflags = [ "-L$outdir" ]
}
